# granton-task

./: Dockerfile  README.md  pyproject.toml
api/: main.py
tests/: conftest.py  test_api.py
