[tool.poetry]
name = "granton"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
openai = "^1.26.0"
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-httpx = "^0.30.0"
pytest-asyncio = "^0.23.6"
uvicorn = "^0.29.0"
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"